--- a/app/assets/stylesheets/modules/chat/messages/messages_index.css.scss.erb
+++ b/app/assets/stylesheets/modules/chat/messages/messages_index.css.scss.erb
@@ -72,9 +72,8 @@
 }
 
 .magic_link_notice {
-  padding: 0 0 0.6rem 0;
+  padding: 1.3rem 0 1.6rem 0;
   position: relative;
-  min-height: 15rem;
   background-color: $slack_bg_light;
   margin-bottom: 1.5rem;
   text-align: center;
@@ -85,6 +84,7 @@
 .magic_link_notice__content {
   padding: 0 0 0.6rem 0;
   box-sizing: border-box;
+  margin: 0 10rem;
 }
 
 .magic_link_notice__heading {
