Write default team avatar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,5 +17,6 @@
  *= require ./base
  *= require react-select/dist/react-select
  *= require ./layout
+ *= require ./utility
  *= require_tree ./modules
  */
