--- a/app/assets/stylesheets/modules/buttons/avatar_img.css.scss
+++ b/app/assets/stylesheets/modules/buttons/avatar_img.css.scss
@@ -7,4 +7,11 @@
   border-radius: 0.3rem;
   vertical-align: middle;
   margin: 0 1rem 0 0;
+
+  line-height: 3.6rem;
+  text-align: center;
+  color: white;
+  font-family: $lato;
+  font-weight: 900;
+  font-size: 2.5rem;
 }
