Style invite link field

--- a/app/assets/stylesheets/modules/font_awesome/icons.css.scss
+++ b/app/assets/stylesheets/modules/font_awesome/icons.css.scss
@@ -12,6 +12,10 @@
   color: $slack_sidenav_lightgrey;
 }
 
+.fa-submitgrey {
+  color: $slack_submit_greyicon_color;
+}
+
 .fa-white {
   color: white;
 }
