--- a/app/assets/stylesheets/globals/_vars_colors.scss
+++ b/app/assets/stylesheets/globals/_vars_colors.scss
@@ -37,3 +37,4 @@ $slack_cancel_color: #0576B9;
 $slack_green_button: #56B68B;
 $slack_green_button_border: #2ea664;
 $slack_submit_plus_color: #a0a0a2;
+$slack_submit_greyicon_color: #a0a0a2;
