--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -53,3 +53,11 @@
 .l-margin_left--12 {
   margin-left: 1.2rem;
 }
+
+.l-center {
+  text-align: center;
+}
+
+.l-margin_top--4 {
+  margin-top: 0.4rem;
+}
