Change phone breakpoint

--- a/app/assets/stylesheets/globals/_mixins_media.scss
+++ b/app/assets/stylesheets/globals/_mixins_media.scss
@@ -1,7 +1,7 @@
 @import './_media_breakpoints.scss';
 
 @mixin phone {
-  @media (max-width: #{$tablet-width}) {
+  @media (max-width: #{$tablet-width - 1px}) {
     @content;
   }
 }
